--- a/04-intro-desc-stat/04-DescriptiveStatistics.ipynb
+++ b/04-intro-desc-stat/04-DescriptiveStatistics.ipynb
@@ -22,7 +22,7 @@
     "- correlation vs causation\n",
     "- confounding variables \n",
     "- descriptive vs. inferential statistics\n",
-    "- discrete and continuous random variables (e.g.: Bernoulli, Binomial, Normal)"
+    "- discrete and continuous random variables (e.g.: Bernoulli, Binomial, Normal)\n"
    ]
   },
   {
@@ -355,7 +355,8 @@
     "#plt.legend(loc='lower right')\n",
     "plt.show() #Display all previous plots in one figure\n",
     "plt.plot(np.arange(7), Alta_avg_month_snow,'o')\n",
-    "plt.show() "
+    "plt.show() \n",
+    "plt.show()"
    ]
   },
   {
@@ -1577,7 +1578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   },
   "nbpresent": {
    "slides": {
