--- a/05-dictionaries-pandas-series/05-exercises.ipynb
+++ b/05-dictionaries-pandas-series/05-exercises.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13658,7 +13658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -13720,19 +13720,7 @@
       "dtype: int64\n",
       "\n",
       "This is the dollar value of the rings given to each team:\n",
-      "\n",
-      "New England Patriots             $8370000\n",
-      "Pittsburgh Steelers              $8370000\n",
-      "Dallas Cowboys                   $6975000\n",
-      "San Francisco 49ers              $6975000\n",
-      "Green Bay Packers                $5580000\n",
-      "New York Giants                  $5580000\n",
-      "Denver Broncos                   $4185000\n",
-      "Oakland/Los Angeles Raiders      $4185000\n",
-      "Washington Redskins              $4185000\n",
-      "Miami Dolphins                   $2790000\n",
-      "Baltimore/Indianapolis Colts     $2790000\n",
-      "Baltimore Ravens                 $2790000\n"
+      "\n"
      ]
     }
    ],
@@ -13747,9 +13735,43 @@
     "print(nfl_teams * 45, end='\\n\\n')\n",
     "print('This is the dollar value of the rings given to each team:', end='\\n\\n')\n",
     "\n",
-    "max_l = max([len(x) for x in nfl_teams.index])\n",
+    "# max_l = max([len(x) for x in nfl_teams.index])\n",
+    "# for key, value in nfl_teams.items():\n",
+    "#     print(key + ' ' * (5 + max_l - len(key)) + '$' + str(value * 45 * 31000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "New England Patriots            $8370000\n",
+       "Pittsburgh Steelers             $8370000\n",
+       "Dallas Cowboys                  $6975000\n",
+       "San Francisco 49ers             $6975000\n",
+       "Green Bay Packers               $5580000\n",
+       "New York Giants                 $5580000\n",
+       "Denver Broncos                  $4185000\n",
+       "Oakland/Los Angeles Raiders     $4185000\n",
+       "Washington Redskins             $4185000\n",
+       "Miami Dolphins                  $2790000\n",
+       "Baltimore/Indianapolis Colts    $2790000\n",
+       "Baltimore Ravens                $2790000\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "for key, value in nfl_teams.items():\n",
-    "    print(key + ' ' * (5 + max_l - len(key)) + '$' + str(value * 45 * 31000))"
+    "    nfl_teams[key] = '$' + str(value * 31000 * 45)\n",
+    "nfl_teams"
    ]
   }
  ],
