--- a/13-Scraping-APIs/13-exercise-scraping-apis.ipynb
+++ b/13-Scraping-APIs/13-exercise-scraping-apis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,11 +36,389 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://en.wikipedia.org/wiki/List_of_multiple_Olympic_medalists\"\n"
+    "# 1 Download the html using urllib\n",
+    "url = \"https://en.wikipedia.org/wiki/List_of_multiple_Olympic_medalists\"\n",
+    "\n",
+    "with urllib.request.urlopen(url) as response:\n",
+    "    html = response.read()\n",
+    "    html = html.decode('utf-8')\n",
+    "\n",
+    "# 2 Parse this html with BeautifulSoup\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "# 3 Extract the html that corresponds to the big table from the soup\n",
+    "data = soup.select(\"table.wikitable\")[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gold</th>\n",
+       "      <th>Silver</th>\n",
+       "      <th>Bronze</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nation</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Australia</th>\n",
+       "      <td>24</td>\n",
+       "      <td>22</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Austria</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Belgium</th>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>China</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Czechoslovakia</th>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>East Germany</th>\n",
+       "      <td>14</td>\n",
+       "      <td>18</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>East Germany  Germany</th>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Finland</th>\n",
+       "      <td>30</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>France</th>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Germany</th>\n",
+       "      <td>24</td>\n",
+       "      <td>23</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Great Britain</th>\n",
+       "      <td>17</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hungary</th>\n",
+       "      <td>30</td>\n",
+       "      <td>15</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Italy</th>\n",
+       "      <td>26</td>\n",
+       "      <td>23</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jamaica</th>\n",
+       "      <td>11</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Japan</th>\n",
+       "      <td>36</td>\n",
+       "      <td>17</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kazakhstan</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Netherlands</th>\n",
+       "      <td>19</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Norway</th>\n",
+       "      <td>44</td>\n",
+       "      <td>24</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Poland</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Romania</th>\n",
+       "      <td>17</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Russia</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>South Korea  Russia</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Soviet Union</th>\n",
+       "      <td>53</td>\n",
+       "      <td>48</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Soviet Union Unified Team</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sweden</th>\n",
+       "      <td>22</td>\n",
+       "      <td>19</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Switzerland</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Unified Team  Belarus</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Unified Team  Russia</th>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Unified Team Russia</th>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United States</th>\n",
+       "      <td>143</td>\n",
+       "      <td>57</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United Team of Germany  West Germany</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zimbabwe</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       Gold  Silver  Bronze\n",
+       "Nation                                                     \n",
+       " Australia                               24      22      10\n",
+       " Austria                                  3       1       3\n",
+       " Belgium                                  6       3       0\n",
+       " China                                    5       1       1\n",
+       " Czechoslovakia                           7       4       0\n",
+       " East Germany                            14      18       6\n",
+       " East Germany  Germany                    8       4       0\n",
+       " Finland                                 30      13      14\n",
+       " France                                  11      10       2\n",
+       " Germany                                 24      23      15\n",
+       " Great Britain                           17       3       2\n",
+       " Hungary                                 30      15      12\n",
+       " Italy                                   26      23      22\n",
+       " Jamaica                                 11       6       8\n",
+       " Japan                                   36      17      12\n",
+       " Kazakhstan                               1       4       2\n",
+       " Netherlands                             19      16       9\n",
+       " Norway                                  44      24      10\n",
+       " Poland                                   3       2       2\n",
+       " Romania                                 17       9       5\n",
+       " Russia                                   8       8      10\n",
+       " South Korea  Russia                      6       0       2\n",
+       " Soviet Union                            53      48      26\n",
+       " Soviet Union Unified Team                4       5       1\n",
+       " Sweden                                  22      19       8\n",
+       " Switzerland                              4       3       1\n",
+       " Unified Team  Belarus                    6       0       4\n",
+       " Unified Team  Russia                    13       6       5\n",
+       " Unified Team Russia                      7       5       4\n",
+       " United States                          143      57      42\n",
+       " United Team of Germany  West Germany    11       1       3\n",
+       " Zimbabwe                                 2       4       1"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4 Parse the table into a pandas dataframe\n",
+    "headers_base = data.find_all('th')\n",
+    "headers = pd.Series([tag.get_text() for tag in headers_base]).str.replace('\\n','')\n",
+    "rows_base = data.select('td')\n",
+    "rows = [tag.get_text() for tag in rows_base]\n",
+    "\n",
+    "# Set up lists for adding data\n",
+    "count = 0\n",
+    "no = []\n",
+    "athlete = []\n",
+    "nation = []\n",
+    "sport = []\n",
+    "years = []\n",
+    "games = []\n",
+    "gender = []\n",
+    "gold = []\n",
+    "silver = []\n",
+    "bronze = []\n",
+    "\n",
+    "gender = ['M','F']\n",
+    "\n",
+    "# Iterate through the rows and assign to the appropriate columns\n",
+    "for i in rows:\n",
+    "    if i in gender:\n",
+    "        count = 6\n",
+    "#     if '\\n' in i:\n",
+    "#         count = 0\n",
+    "    if '\\xa0' in i:\n",
+    "        count = 2\n",
+    "        \n",
+    "        \n",
+    "    if count == 0:\n",
+    "        no.append(i)\n",
+    "        count += 1\n",
+    "    elif count == 1:\n",
+    "        try:\n",
+    "            if isinstance(int(i), int):\n",
+    "                no.append(i)\n",
+    "                count = 1\n",
+    "        except:\n",
+    "            athlete.append(i)\n",
+    "            count += 1\n",
+    "    elif count == 2:\n",
+    "        nation.append(i)\n",
+    "        count += 1\n",
+    "    elif count == 3:\n",
+    "        sport.append(i)\n",
+    "        count += 1  \n",
+    "    elif count == 4:\n",
+    "        years.append(i)\n",
+    "        count += 1 \n",
+    "    elif count == 5:\n",
+    "        games.append(i)\n",
+    "        count += 1 \n",
+    "    elif count == 6:\n",
+    "        gender.append(i)\n",
+    "        count += 1 \n",
+    "    elif count == 7:\n",
+    "        gold.append(i)\n",
+    "        count += 1 \n",
+    "    elif count == 8:\n",
+    "        silver.append(i)\n",
+    "        count += 1 \n",
+    "    else:\n",
+    "        bronze.append(i)\n",
+    "        count = 0\n",
+    "\n",
+    "data_df_base = {}\n",
+    "raw_data = [no, athlete, nation, sport, years, games, gender, gold, silver, bronze]\n",
+    "\n",
+    "for index, value in enumerate(headers[:10]):\n",
+    "    data_df_base[value] = raw_data[index]\n",
+    "\n",
+    "# Removed rows with inconsistent lengths\n",
+    "del data_df_base['No.']\n",
+    "del data_df_base['Athlete']\n",
+    "del data_df_base['Gender']\n",
+    "\n",
+    "# 5 Create a table that shows for each country how many gold, silver, bronze, and total medals it won in that list.\n",
+    "# Convert to a dataframe\n",
+    "data_df = pd.DataFrame(data_df_base)\n",
+    "\n",
+    "# Clean the dataframe\n",
+    "data_df['Bronze'] = data_df['Bronze'].str.replace('\\n','') \n",
+    "data_df.loc[:,['Gold', 'Silver', 'Bronze']] = data_df.loc[:,['Gold', 'Silver', 'Bronze']].astype(int)\n",
+    "\n",
+    "# Create final output\n",
+    "data_df.groupby(['Nation'])[['Gold','Silver','Bronze']].agg('sum')"
    ]
   },
   {
@@ -54,11 +432,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests \n",
+    "# import requests \n",
     "\n"
    ]
   }
@@ -79,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
